manifest/objects/ALTF__Opportunity__c.object
<CustomObject>
    <description>NO CONFIGURATION SUPPORT

This object is responsible for storing Altify attributes relating to an Opportunity. There should be exactly one of these for each Opportunity in the system.</description>
    <fields>
        <fullName>ALTF__Active_Test_and_Improve__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Active Test and Improves for an Altify opportunity</description>
        <label>Active Test And Improve</label>
        <referenceTo>ALTF__Test_And_Improve__c</referenceTo>
        <relationshipLabel>Altify Opportunities</relationshipLabel>
        <relationshipName>AltifyOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__AltifyId__c</fullName>
        <description>An external ID used for Altify</description>
        <externalId>true</externalId>
        <label>AltifyId</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ALTF__Altify_Insight_Tags_Text__c</fullName>
        <label>Altify Insight Tags Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Altify_Insight_Tags__c</fullName>
        <label>Altify Insight Tags</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ALTF__Altify_Insight_Tags</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ALTF__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ALTF__Assessment_Answer_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Count of the Assessment Questions that have a definitive Yes/No anwser</description>
        <label>Assessment Answer Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Assessment_Answer_Last_Updated__c</fullName>
        <description>Date on which an Assessment Answer was last updated</description>
        <label>Assessment Answer Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ALTF__Assessment_Competitor_Anwser_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Count of the Competitor Answers on the Assessment Questions</description>
        <label>Assessment Competitor Answer Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Assessment_Competitor_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Count of the Competitors on the Assessment Questions</description>
        <label>Assessment Competitor Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Assessment_Last_Chatted_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User that Last Chatted about the Assessment for this Opportunity</description>
        <label>Assessment Last Chatted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Assessment_Last_Chatted_By</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__Assessment_Last_Chatted_Time__c</fullName>
        <label>TAS Last Chatted Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ALTF__Assessment_Score__c</fullName>
        <label>Assessment Completeness</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ALTF__Assessment_Status__c</fullName>
        <label>Assessment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ALTF__Altify_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ALTF__Calculated_Close_Date__c</fullName>
        <formula>IF ( 
	ALTF__Opportunity__r.IsClosed  || ALTF__Is_Altify_Opp__c = false , 
	IF (
		ALTF__Opportunity__r.IsWon  || ALTF__Is_Altify_Opp__c = false, 
		ALTF__Opportunity__r.CloseDate, 
		null
	),
	IF (
			NULLVALUE (ALTF__Pause_Date__c,  DATEVALUE(NOW())) &gt; DATEVALUE(NOW()), 
			ALTF__Pause_Date__c  +  (NULLVALUE(ALTF__Weeks_To_Close__c, 0) * 7), 
			DATEVALUE(NOW())  +  (NULLVALUE(ALTF__Weeks_To_Close__c, 0) * 7)
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qualification Calculated Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ALTF__Completeness_Calc_Time__c</fullName>
        <label>Completeness Calc Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ALTF__Decision_Criteria_Last_Updated__c</fullName>
        <description>Date on which a Decision Criteria was last updated</description>
        <label>Decision Criteria Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ALTF__Decision_Criteria_Score__c</fullName>
        <label>Decision Criteria Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ALTF__Decision_Criteria_Status__c</fullName>
        <label>Decision Criteria Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ALTF__Altify_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ALTF__FSM1__c</fullName>
        <inlineHelpText>OPPORTUNITY: Is there an opportunity?</inlineHelpText>
        <label>PlanSignal Oppty</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Blank</fullName>
                    <default>true</default>
                    <label>Blank</label>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ALTF__FSM2__c</fullName>
        <inlineHelpText>PROBLEMS: Are the business problems validated? Have you confirmed unique value?</inlineHelpText>
        <label>PlanSignal Problems</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Blank</fullName>
                    <default>true</default>
                    <label>Blank</label>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ALTF__FSM3__c</fullName>
        <inlineHelpText>PEOPLE: Do you have support and alignment from the key people?</inlineHelpText>
        <label>PlanSignal People</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Blank</fullName>
                    <default>true</default>
                    <label>Blank</label>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ALTF__Formal_Decision_Criteria_Contact_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Count of the Contacts associated with Formal Decision Critera</description>
        <label>Formal Decision Criteria Contact Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Formal_Decision_Criteria_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Count of the Formal Decision Critera</description>
        <label>Formal Decision Criteria Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Informal_Decision_Criteria_Contact_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Count of the Contacts associated with Informal Decision Critera</description>
        <label>Informal Decision Criteria Contact Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Informal_Decision_Criteria_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Count of the Informal Decision Critera</description>
        <label>Informal Decision Criteria Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Insight_Card_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Count of the number of cards on the Insight Map</description>
        <label>Insight Map Card Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Insight_Cards_Owned_And_Validated__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Count of the number of Cards that have owners and have been validated on the insight map</description>
        <label>Insight Cards Owned and Validated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Insight_Map_Last_Updated__c</fullName>
        <description>Date on which the Insight Map was last updated</description>
        <label>Insight Map Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ALTF__Insight_Published__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Insight Published</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Insight_Section_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Count of the Sections on the Inight Map</description>
        <label>Insight Map Section Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Insights_Last_Chatted_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Insights Last Chatted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Collaberation_Map_Last_Chatted_By</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__Insights_Last_Chatted_Time__c</fullName>
        <label>Insights Last Chatted Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ALTF__Insights_Score__c</fullName>
        <label>Insights Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ALTF__Insights_Status__c</fullName>
        <label>Insights Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ALTF__Altify_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ALTF__Is_Actions_Ever_Planned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Actions Ever Planned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Is_Altify_Opp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Altify Opp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__MAN1Comment__c</fullName>
        <label>Mgmt KeyDeal Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ALTF__MAN1LastUpdatedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mgmt KeyDeal Last Updated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Altify_Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__MAN1LastUpdated__c</fullName>
        <label>Mgmt KeyDeal Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ALTF__MAN1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mgmt KeyDeal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__MAN2Comment__c</fullName>
        <label>Mgmt Attn Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ALTF__MAN2LastUpdatedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mgmt Attn Last Updated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Altify_Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__MAN2LastUpdated__c</fullName>
        <label>Mgmt Attn Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ALTF__MAN2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mgmt Attn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__MAN3Comment__c</fullName>
        <label>Mgmt T&amp;I Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ALTF__MAN3LastUpdatedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mgmt T&amp;I Last Updated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Altify_Opportunities4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__MAN3LastUpdated__c</fullName>
        <label>Mgmt T&amp;I Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ALTF__MAN3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mgmt T&amp;I</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Max_Due_Date_All_Tasks__c</fullName>
        <label>Max Due Date All Tasks</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ALTF__Min_Due_Date_All_Tasks__c</fullName>
        <label>Min Due Date All Tasks</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ALTF__Mix__c</fullName>
        <formula>if ( ALTF__Opportunity_Amount__c == null || ALTF__Sales_Process__c == null, -1,
If	(
	NULLVALUE(ALTF__Opportunity_Amount__c, 0) &gt;= ALTF__Sales_Process__r.ALTF__Rock_Value__c,
	1,
	IF	(
		NULLVALUE(ALTF__Opportunity_Amount__c, 0) &lt; ALTF__Sales_Process__r.ALTF__Pebble_Value__c,
		3,
		2
	)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mix</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Opportunity_Amount__c</fullName>
        <formula>IF( ISBLANK($Setup.ALTF__Sales_Process_Settings__c.ALTF__Opp_Amount_Field__c),  ALTF__Opportunity__r.Amount ,  ALTF__Amount__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ALTF__Opportunity_Completeness__c</fullName>
        <label>Opportunity Completeness</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ALTF__Opportunity_Status__c</fullName>
        <label>Opportunity Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ALTF__Altify_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ALTF__Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Altify Opportunities</relationshipLabel>
        <relationshipName>Altify_Opportunities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ALTF__PRIME_Action_Closed_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Count of the PRIME Actions that are currently closed</description>
        <label>PRIME Action Closed Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__PRIME_Action_Open_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Count of the PRIME Actions that are currently open</description>
        <label>PRIME Action Open Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__PRIME_Action_Overdue_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Count of the PRIME Actions that are currently overdue</description>
        <label>PRIME Action Overdue Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__PRIME_Actions_Last_Updated__c</fullName>
        <description>Date on which the PRIME Actions were last updated</description>
        <label>PRIME Actions Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ALTF__PRIME_Last_Chatted_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PRIME Last Chatted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PRIME_Last_Chatted_By</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__PRIME_Last_Chatted_Time__c</fullName>
        <label>PRIME Last Chatted Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ALTF__PRIME_Score__c</fullName>
        <label>PRIME Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ALTF__PRIME_Status__c</fullName>
        <label>PRIME Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ALTF__Altify_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ALTF__Pause_Date__c</fullName>
        <label>Qualification Pause Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ALTF__Probability__c</fullName>
        <label>Qualification  Probability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ALTF__Qualification_Dirty__c</fullName>
        <formula>IF (
	ALTF__Qualification_Sales_Process_Type_Stamp__c  &lt;&gt; ALTF__Sales_Process__c, 
	1, 
	IF (
		ALTF__Qualification_Sales_Process_Ver_Stamp__c  &lt;&gt; ALTF__Sales_Process__r.ALTF__Version__c, 
		1, 
		0
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qualification_Dirty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Qualification_Last_Chatted_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Qualification Last Chatted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Altify_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__Qualification_Last_Chatted_Time__c</fullName>
        <label>Qualification Last Chatted Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ALTF__Qualification_Progress__c</fullName>
        <label>Qualification Progress</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Qualification_Sales_Process_Type_Stamp__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Qualification Sales Process Type Stamp</label>
        <referenceTo>ALTF__Sales_Process__c</referenceTo>
        <relationshipLabel>Altify Opportunities (Qualification Sales Process Type Stamp)</relationshipLabel>
        <relationshipName>Altify_Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__Qualification_Sales_Process_Ver_Stamp__c</fullName>
        <label>Qualification Sales Process Ver Stamp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Qualification_Stage__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Qualification Stage</label>
        <referenceTo>ALTF__Stage__c</referenceTo>
        <relationshipLabel>Altify Opportunities</relationshipLabel>
        <relationshipName>Altify_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__Recommended_Strategy__c</fullName>
        <label>Recommended Strategy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Frontal</fullName>
                </value>
                <value>
                    <fullName>Flanking</fullName>
                </value>
                <value>
                    <fullName>Fragment</fullName>
                </value>
                <value>
                    <fullName>Defend</fullName>
                </value>
                <value>
                    <fullName>Develop</fullName>
                </value>
                <value>
                    <fullName>Disengage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ALTF__Rel_Map_Key_Roles_Uncovered_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Count of Key Players with Decision Maker or Approver on the relationship map</description>
        <label>Rel Map Key Roles Uncovered Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Rel_Map_Supportive_Key_Player_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Count of Key Players that are Supporter or Mentor on the relationship map</description>
        <label>Rel Map Supportive Key Player Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Relationship_Map_Contact_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Count of contacts on the relationship map</description>
        <label>Relationship Map Contact Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Relationship_Map_Key_Player_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Count of Key Players (i.e. contacts on the relationship map which are Inner Circle or Political Structure.</description>
        <label>Relationship Map Key Player Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Relationship_Map_Last_Updated__c</fullName>
        <label>Relationship Map Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ALTF__Relationships_Last_Chatted_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User that Last Chatted about the Relationships for this Opportunity</description>
        <label>Relationships Last Chatted By</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Users</relationshipLabel>
        <relationshipName>User</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__Relationships_Last_Chatted_Time__c</fullName>
        <label>Relationship Map Last Chatted Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ALTF__Relationships_Score__c</fullName>
        <label>Relationships Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ALTF__Relationships_Status__c</fullName>
        <label>Relationships Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ALTF__Altify_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ALTF__Sales_Process_Name__c</fullName>
        <description>Qualification Sales Process Name</description>
        <inlineHelpText>Qualification Sales Process Name</inlineHelpText>
        <label>Qualification Sales Process Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Sales_Process_Stage_Name__c</fullName>
        <description>Qualification Sales Process Stage Name</description>
        <inlineHelpText>Qualification Sales Process Stage N</inlineHelpText>
        <label>Qualification Sales Process Stage Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Sales_Process_Stage__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Qualification Sales Process Stage</label>
        <referenceTo>ALTF__Sales_Process_Stage__c</referenceTo>
        <relationshipLabel>Altify Opportunities</relationshipLabel>
        <relationshipName>Altify_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__Sales_Process__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Qualification Sales Process</label>
        <referenceTo>ALTF__Sales_Process__c</referenceTo>
        <relationshipLabel>Altify Opportunities</relationshipLabel>
        <relationshipName>Altify_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__Strategy_Last_Chatted_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Strategy Last Chatted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Strategy_Last_Chatted_By</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__Strategy_Last_Chatted_Time__c</fullName>
        <label>Strategy Last Chatted Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ALTF__Strategy_Score__c</fullName>
        <label>Strategy Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ALTF__Strategy_Status__c</fullName>
        <label>Strategy Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ALTF__Altify_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ALTF__Use_Recommended__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Use Recommended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__User_Defined_Strategy__c</fullName>
        <label>User Defined Strategy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Frontal</fullName>
                </value>
                <value>
                    <fullName>Flanking</fullName>
                </value>
                <value>
                    <fullName>Fragment</fullName>
                </value>
                <value>
                    <fullName>Defend</fullName>
                </value>
                <value>
                    <fullName>Develop</fullName>
                </value>
                <value>
                    <fullName>Disengage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ALTF__Weeks_To_Close__c</fullName>
        <label>Qualification Weeks To Close</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Worked_In_Altify__c</fullName>
        <formula>OR( ALTF__Worked_in_OM__c ,  ALTF__Worked_In_Playbook__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Worked In Altify</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Worked_In_Playbook__c</fullName>
        <formula>ALTF__Probability__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Worked In Playbook</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Worked_in_OM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Worked in OM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Altify_Plans_Created__c</fullName>
        <formula>CASE(ALTF__FSM4__c, &quot;Unknown&quot;,0 , &quot;Blank&quot;, 0, &quot;Yes&quot;, 20, &quot;No&quot;,0, &quot;&quot;,0, 0)
+
CASE( ALTF__FSM5__c , &quot;Yes&quot;, 20, &quot;No&quot;, 0, &quot;Blank&quot;,0, &quot;Unknown&quot;,0, &quot;&quot;, 0,0)
+
CASE( ALTF__FSM2__c , &quot;Yes&quot;, 20, &quot;No&quot;, 0, &quot;Blank&quot;,0, &quot;Unknown&quot;,0, &quot;&quot;, 0,0)
+
CASE( ALTF__FSM3__c  , &quot;Yes&quot;, 20, &quot;No&quot;, 0, &quot;Blank&quot;,0, &quot;Unknown&quot;,0, &quot;&quot;, 0,0)
+ 
CASE( ALTF__FSM1__c  , &quot;Yes&quot;, 20, &quot;No&quot;, 0, &quot;Blank&quot;,0, &quot;Unknown&quot;,0, &quot;&quot;, 0,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Altify Plans Created</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMMAX__Assessment_Completeness__c</fullName>
        <label>Assessment Completeness</label>
        <summaryForeignKey>ALTF__Assessment_Answer__c.ALTF__Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DMMAX__COM_HasCompetitors__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Yes if there are competitors for the Opportunity.</inlineHelpText>
        <label>Has Competitors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMMAX__COM_StrategyAll__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Yes if you have identified the likely competitive strategy for each of the competitors in the Opportunity.</inlineHelpText>
        <label>Strategy All Competitors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMMAX__COM_Strategy__c</fullName>
        <inlineHelpText>Chosen competitive strategy</inlineHelpText>
        <label>Strategy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
                <value>
                    <fullName>Frontal</fullName>
                </value>
                <value>
                    <fullName>Flanking</fullName>
                </value>
                <value>
                    <fullName>Defend</fullName>
                </value>
                <value>
                    <fullName>Develop</fullName>
                </value>
                <value>
                    <fullName>Disengage</fullName>
                </value>
                <value>
                    <fullName>Fragment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DMMAX__Competitor_Completeness_Total__c</fullName>
        <label>Competitor Completeness Total</label>
        <summarizedField>ALTF__Opportunity_Competitor__c.DMMAX__Completeness__c</summarizedField>
        <summaryForeignKey>ALTF__Opportunity_Competitor__c.ALTF__Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DMMAX__Competitor_Completeness__c</fullName>
        <formula>If(DMMAX__Competitor_Count__c == 0, 0,  DMMAX__Competitor_Completeness_Total__c / DMMAX__Competitor_Count__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Competitor Completeness</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMMAX__Competitor_Count__c</fullName>
        <label>Competitor Count</label>
        <summaryForeignKey>ALTF__Opportunity_Competitor__c.ALTF__Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>